--- a/src/views/job.ejs
+++ b/src/views/job.ejs
@@ -1,13 +1,6 @@
 <%- include('parts/header', {title: "Job", body_id: 'job', css: 'job'}) %>
 
-<header class="page-header inner">
-  <div class="container animate-up">
-    <a href="/" class="back">
-      <img src="/images/back.svg" alt="" />
-    </a>
-    <h1>Adicionar Novo Job</h1>
-  </div>
-</header>
+<%- include('parts/page-header', {title: "Adicionar novo Job"}) %>
 
 <div class="container flex animate-up delay-2">
   <main>
