Perfil com dados dinâmicos

--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -4,8 +4,8 @@
 
 <div class="container animate-up delay-2">
   <aside class="card">
-    <img src="https://avatars.githubusercontent.com/u/17316392?s=460&u=6912a91a70bc89745a2079fdcdad3bc3ce370f13&v=4" alt="Jakeliny">
-    <h2>Jakeliny</h2>
+    <img src="<%= profile.avatar %>" alt="<%= profile.name %>">
+    <h2><%= profile.name %></h2>
     <p>
       O valor da sua hora é <br/>
       <strong>R$ 75,00</strong>
@@ -22,7 +22,7 @@
         <div class="input-group">
           <div class="input-wrapper">
             <label for="name">Nome</label>
-            <input type="text" id="name" name="name" />
+            <input type="text" id="name" name="name" value="<%= profile.name %>" />
           </div>
 
           <div class="input-wrapper">
@@ -31,7 +31,8 @@
             placeholder="https://"
             type="url" 
             id="avatar" 
-            name="avatar" />
+            name="avatar"
+            value="<%= profile.avatar %>" />
           </div>
         </div>
       </fieldset>
@@ -48,7 +49,8 @@
               step="0.1" 
               id="monthly-budget" 
               name="monthly-budget" 
-              placeholder="R$"/>
+              placeholder="R$"
+              value="<%= profile["monthly-budget"] %>"/>
           </div>
 
           <div class="input-wrapper">
@@ -57,7 +59,8 @@
             <input 
               type="number"
               id="hours-per-day" 
-              name="hours-per-day" />
+              name="hours-per-day"
+              value="<%= profile["hours-per-day"] %>" />
           </div>
         </div>
 
@@ -68,7 +71,8 @@
             <input
               type="number"
               id="days-per-week" 
-              name="days-per-week" />
+              name="days-per-week"
+              value="<%= profile["days-per-week"] %>" />
           </div>
 
           <div class="input-wrapper">
